[package]
name = "advent-uniq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
env_logger = "0.9.0"
flume = "0.10.9"
log = "0.4.14"
thiserror = "1.0.30"

# [profile.release]
# debug = 1
